Change `monitoring` example into `stage9`.
Also added a `last` stage, which has all the tests in it, running on
the last `pstring` stage.

--- a/pstring/CMakeLists.txt
+++ b/pstring/CMakeLists.txt
@@ -31,3 +31,12 @@ target_link_libraries(stage7a stdpmr supportlib)
 
 add_executable(stage8 stage8.cpp pstring_stage8.h)
 target_link_libraries(stage8 stdpmr supportlib)
+
+add_executable(stage8a stage8a.cpp pstring_stage8.h)
+target_link_libraries(stage8a stdpmr supportlib)
+
+add_executable(stage9 stage9.cpp pstring_stage9.h)
+target_link_libraries(stage9 stdpmr supportlib)
+
+add_executable(last last.cpp pstring_last.h)
+target_link_libraries(last stdpmr supportlib)
